--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "passport-local": "^1.0.0",
     "path-browserify": "^1.0.1",
     "pigpio": "^3.2.3",
+    "pigpio-mock": "0.0.1",
     "prettify": "0.1.7",
     "prompt": "1.0.0",
     "puppeteer": "^2.1.1",
