--- a/package.json
+++ b/package.json
@@ -95,16 +95,19 @@
     "n": "2.1.0",
     "node-cache": "^5.1.0",
     "node-ttl": "0.0.5",
+    "node-webcam": "^0.6.2",
     "onoff": "^5.0.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "path-browserify": "^1.0.1",
+    "pi-camera-connect": "^0.3.0",
     "pigpio": "^3.2.3",
     "pigpio-mock": "0.0.1",
     "prettify": "0.1.7",
     "prompt": "1.0.0",
     "puppeteer": "^2.1.1",
     "request": "^2.88.2",
+    "rtsp-ffmpeg": "0.0.14",
     "sanitize-filename": "^1.6.1",
     "serialport": "7.0.2",
     "session-file-store": "^1.4.0",
