--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "fs-extra": "^8.1.0",
     "glob": "^7.0.3",
     "handlebars": "4.3.0",
+    "i2c-bus": "^5.2.0",
     "js-treeview": "^1.1.5",
     "jsdom": "9.0.0",
     "jsts": "1.6.0",
@@ -100,6 +101,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "path-browserify": "^1.0.1",
+    "pca9685": "^4.0.3",
     "pi-camera-connect": "^0.3.0",
     "pigpio": "^3.2.3",
     "pigpio-mock": "0.0.1",
@@ -112,13 +114,15 @@
     "serialport": "7.0.2",
     "session-file-store": "^1.4.0",
     "shortid": "^2.2.15",
+    "sleep": "^6.2.0",
     "socket.io": "2.1.1",
     "split.js": "^1.5.11",
     "system": "2.0.1",
     "truncate-utf8-bytes": "^1.0.2",
     "tslib": "^1.11.1",
     "unzip": "^0.1.11",
-    "webpage": "0.3.0"
+    "webpage": "0.3.0",
+    "wiring-pi": "^2.2.1"
   },
   "homepage": "https://github.com/freegroup/brainbox#readme"
 }
